spacing fixes

--- a/components/banner.module.css
+++ b/components/banner.module.css
@@ -125,6 +125,14 @@
   font-weight: 600;
 }
 
+@media (max-width: 1280px) {
+  .image {
+    padding: 60px;
+  }
+  .loremIpsumDolor {
+    font-size: 16px;
+  }
+}
 @media (max-width: 768px) {
   .image {
     height: 80vh;
