--- a/components/explore-items.module.css
+++ b/components/explore-items.module.css
@@ -47,6 +47,12 @@
   color: var(--text-primary);
   font-family: var(--h2-48);
 }
+@media (max-width: 1280px) {
+  .exploreItems {
+    font-size: 20px;
+    padding: 1rem;
+  }
+}
 @media screen and (max-width: 450px) {
   .perfumes {
     font-size: var(--font-size-lgi);
