--- a/components/frame-component2.module.css
+++ b/components/frame-component2.module.css
@@ -21,7 +21,8 @@
   overflow: hidden;
   flex-direction: column;
   align-items: center;
-  padding: var(--padding-41xl) var(--padding-61xl);
+  /* padding: var(--padding-41xl) var(--padding-61xl); */
+  padding: var(--padding-41xl) 0 0 0;
 }
 .othersWrapper {
   align-self: stretch;
@@ -33,6 +34,7 @@
   color: var(--text-primary);
   font-family: var(--h2-48);
 }
+
 @media screen and (max-width: 750px) {
   .others {
     gap: var(--gap-xl);
