--- a/components/nav.module.css
+++ b/components/nav.module.css
@@ -321,3 +321,9 @@
     display: none;
   }
 }
+
+@media (max-width: 1280px) {
+  .menu {
+    width: 655px;
+  }
+}
